crates/test-files/fixtures/compile_errors/call_wrong_return_type.fe
contract Foo {
    pub fn __call__() -> u64 {
        return 10
    }
}
